--- a/diplom/diplom.csproj
+++ b/diplom/diplom.csproj
@@ -57,6 +57,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Com.xaml.cs">
+      <DependentUpon>Com.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CreateProf.xaml.cs">
       <DependentUpon>CreateProf.xaml</DependentUpon>
     </Compile>
@@ -69,6 +72,10 @@
     <Compile Include="SelectProf.xaml.cs">
       <DependentUpon>SelectProf.xaml</DependentUpon>
     </Compile>
+    <Page Include="Com.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="CreateProf.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
