--- a/diplom/diplom.csproj
+++ b/diplom/diplom.csproj
@@ -66,8 +66,14 @@
     <Compile Include="CreateProf2.xaml.cs">
       <DependentUpon>CreateProf2.xaml</DependentUpon>
     </Compile>
+    <Compile Include="GeoIzmer.xaml.cs">
+      <DependentUpon>GeoIzmer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Login.xaml.cs">
       <DependentUpon>Login.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="NewIzmerenie.xaml.cs">
+      <DependentUpon>NewIzmerenie.xaml</DependentUpon>
     </Compile>
     <Compile Include="SelectProf.xaml.cs">
       <DependentUpon>SelectProf.xaml</DependentUpon>
@@ -81,6 +87,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CreateProf2.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="GeoIzmer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -100,6 +110,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="NewIzmerenie.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SelectProf.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
